bookstack_frontend_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  labels:
    app: bookstack
spec:
  type: NodePort
  selector:
    app: bookstack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    # nodePort: 32044
